LPS-166110 portal-language - Autogenerated - buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -923,6 +923,7 @@ add-option-value=Добавяне на стойност на опция (Automat
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Добавяне на опции (Automatic Translation)
 add-options-separated-by-commas=Добавяне на опции, отделени със запетаи.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Добавяне на поръчка (Automatic Translation)
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Настройки на импортирането
 import-siteminder-users-from-ldap=Импортиране от LDAP
 import-siteminder-users-from-ldap-help=Ако това е включена, потребителите, удостоверени от SiteMinder, които не съществуват в портала се импортират от LDAP. LDAP трябва да бъде разрешен. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Онлайн приятели {0}
 online-now=Онлайн сега
 online-training=Онлайн обучение (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Само администраторите могат да използват този портлет. (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Разрешава се изтриване само на задължителни полета в режим на редактиране. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Само това събитие ще бъде променено. Останалата част от серията няма да се промени. (Automatic Translation)
 only-this-instance=Само този екземпляр (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Опа (Automatic Translation)
 opacity=непрозрачност (Automatic Translation)
 open=Отваряне
