--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -923,6 +923,7 @@ add-option-value=Afegeix valor d'opció
 add-option-value-to-x=Afegeix valor d'opció a {0}
 add-options=Afegeix opcions
 add-options-separated-by-commas=Afegeix opcions separades per comes.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Afegeix una comanda
 add-order-rule=Afegeix una regla de comanda
 add-order-type=Afegeix un tipus de comanda
@@ -7776,6 +7777,7 @@ import-settings=Importa els paràmetres
 import-siteminder-users-from-ldap=Importa des de LDAP
 import-siteminder-users-from-ldap-help=Si se selecciona aquesta opció, els usuaris autenticats a través de SiteMinder que no existeixin en el portal s'importaran des del LDAP. LDAP ha d'estar habilitat.
 import-status=Estat de la importació
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Importa l'estructura
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11232,6 +11234,7 @@ online-friends-x=Amics connectats {0}
 online-now=Connectat ara
 online-training=Fromació en línia
 only-41-characters-are-allowed=Només es permeten 41 caràcters.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Només els administradors poden utilitzar aquest mòdul de portal.
 only-allow-deleting-required-fields-in-edit-mode=Permet que només es puguin eliminar els camps requerits en mode d'edició.
 only-delete-this-item=Suprimeix només aquest element.
@@ -11252,6 +11255,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Només es farà servir
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Només es modificarà aquest esdeveniment. La resta de la sèrie no canviarà.
 only-this-instance=Només aquesta instància
 only-true-will-be-accepted=Només s'acceptarà "true".
+only-update-records=Only Update Records (Automatic Copy)
 oops=Uix!
 opacity=Opacitat
 open=Obert
