--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -923,6 +923,7 @@ add-option-value=Optionswert hinzufügen
 add-option-value-to-x=Optionswert zu {0} hinzufügen
 add-options=Optionen hinzufügen
 add-options-separated-by-commas=Durch Komma getrennte Optionen hinzufügen.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Auftrag hinzufügen
 add-order-rule=Bestellregel hinzufügen
 add-order-type=Bestellungstyp hinzufügen
@@ -7776,6 +7777,7 @@ import-settings=Import-Einstellungen
 import-siteminder-users-from-ldap=Import aus LDAP
 import-siteminder-users-from-ldap-help=Ist diese Option ausgewählt, werden Benutzer, die über SiteMinder authentifiziert wurden und nicht im Portal vorhanden sind, aus LDAP importiert. LDAP muss aktiviert sein.
 import-status=Importstatus
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Struktur importieren
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11232,6 +11234,7 @@ online-friends-x=Freunde online: {0}
 online-now=Jetzt online
 online-training=Online-Training
 only-41-characters-are-allowed=Es sind nur 41 Zeichen erlaubt.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Nur Administratoren können dieses Portlet benutzen.
 only-allow-deleting-required-fields-in-edit-mode=Das Löschen von Pflichtfeldern ist nur im Bearbeitungsmodus erlaubt.
 only-delete-this-item=Nur dieses Element löschen.
@@ -11252,6 +11255,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Nur die erste Register
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Es wird nur dieser Termin geändert. Die übrige Serie ist nicht betroffen.
 only-this-instance=Nur dieser Termin
 only-true-will-be-accepted=Nur "true" wird akzeptiert.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Hoppla
 opacity=Deckkraft
 open=Offen
