--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -923,6 +923,7 @@ add-option-value=Προσθήκη τιμής επιλογής (Automatic Transla
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Προσθήκη επιλογών (Automatic Translation)
 add-options-separated-by-commas=Προσθέστε τις επιλογές χωρισμένες μεταξύ τους με κόμμα.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Προσθήκη παραγγελίας
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Ρυθμίσεις εισαγωγών
 import-siteminder-users-from-ldap=Εισαγωγή από LDAP
 import-siteminder-users-from-ldap-help=Εάν ενεργοποιηθεί αυτό, οι χρήστες με έλεγχο ταυτότητας από το SiteMinder που δεν υπάρχουν στην πύλη εισάγονται από το LDAP. Το LDAP πρέπει να είναι ενεργοποιημένο. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Φίλοι online {0}
 online-now=Online τώρα
 online-training=Ηλεκτρονική εκπαίδευση (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Αυτό το portlet μπορεί να χρησιμοποιηθεί μόνο από διαχειριστές.
 only-allow-deleting-required-fields-in-edit-mode=Να επιτραπεί η διαγραφή απαραίτητων πεδίων μόνο σε edit mode.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Μόνο αυτό το συμβάν θα τροποποιηθεί. Η υπόλοιπη σειρά δεν θα αλλάξει. (Automatic Translation)
 only-this-instance=Μόνο αυτή η παρουσία (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=ουπς (Automatic Translation)
 opacity=αδιαφάνεια (Automatic Translation)
 open=Ανοικτό
