--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -923,6 +923,7 @@ add-option-value=افزودن ارزش گزینه
 add-option-value-to-x=افزودن ارزش گزینه به {0}
 add-options=افزودن گزینه ها (Automatic Translation)
 add-options-separated-by-commas=افزودن گزینه‌هایی که با کاما جدا شده‌اند.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=افزودن سفارش
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=بازیابی تنظیمات
 import-siteminder-users-from-ldap=بازیابی از LDAP
 import-siteminder-users-from-ldap-help=اگر این بررسی شود، کاربران تصدیق شده از SiteMinder که در پورتال وجود ندارند از LDAP وارد می شوند. LDAP باید فعال باشد. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=دوستان آنلاین {0}
 online-now=هم‌اکنون آنلاین هستید
 online-training=آموزش آنلاین
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=فقط مدیران سایت می‌توانند از این پرتلت استفاده کنند.
 only-allow-deleting-required-fields-in-edit-mode=تنها مجاز به حذف فایل‌های درخواستی در حالت ویرایش هستید.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=فقط این رویداد تغییر خواهد کرد. بقیه سری ها تغییر نخواهند کرد.
 only-this-instance=فقط این مورد
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=آخ
 opacity=کدورت (Automatic Translation)
 open=باز
