--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -923,6 +923,7 @@ add-option-value=Lisää Vaihtoehdon Arvo
 add-option-value-to-x=Lisää Vaihtoehdon Arvo Kohteeseen {0}
 add-options=Lisää Vaihtoehtoja
 add-options-separated-by-commas=Lisää vaihtoehdot erottamalla ne pilkulla.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Lisää järjestys
 add-order-rule=Lisää tilaussääntö
 add-order-type=Lisää tilaustyyppi
@@ -7776,6 +7777,7 @@ import-settings=Tuontiasetukset
 import-siteminder-users-from-ldap=Tuo LDAP:sta
 import-siteminder-users-from-ldap-help=Jos tämä on valittuna, SiteMinderissä todennetut käyttäjät, joita ei ole portaalissa, tuodaan LDAP:sta. LDAP on oltava käytössä.
 import-status=Tuonnin tila
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Tuo rakenne
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11229,6 +11231,7 @@ online-friends-x=Kirjautuneita ystäviä {0}
 online-now=Nyt kirjautuneena
 online-training=Online koulutus
 only-41-characters-are-allowed=Vain 41 merkkiä sallitaan.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Vain ylläpitäjät voivat käyttää tätä portlettia.
 only-allow-deleting-required-fields-in-edit-mode=Vain muokkaustilassa on mahdollista poistaa vaaditut kentät.
 only-delete-this-item=Poista vain tämä kohde.
@@ -11249,6 +11252,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Vain ensimmäistä vä
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Vain tätä tapahtumaa muutetaan. Muut sarjassa eivät muutu.
 only-this-instance=Vain tässä ilmentymässä
 only-true-will-be-accepted=Vain tosi hyväksytään.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Hups
 opacity=Opasiteetti
 open=Avoin
