--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -923,6 +923,7 @@ add-option-value=Add Option Value (Automatic Copy)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Engadir opcións
 add-options-separated-by-commas=Especificar opcións separadas por comas.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Engadir pedido
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Configuación da importación
 import-siteminder-users-from-ldap=Importación de LDAP
 import-siteminder-users-from-ldap-help=Se isto é seleccionado, entón os usuarios autenticados polo SiteMinder que non existan no portal, serán importados de LDAP. O LDAP debe estar activo.
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Amigos conectados {0}
 online-now=Usuarios conectados
 online-training=Online Training (Automatic Copy)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Solo os administradores poden usar este portlet.
 only-allow-deleting-required-fields-in-edit-mode=Only allow deleting required fields in edit mode. (Automatic Copy)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Only this event will be modified. The rest of the series will not change. (Automatic Copy)
 only-this-instance=Only This Instance (Automatic Copy)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Vaites
 opacity=Opacidade
 open=Aberto
