--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -923,6 +923,7 @@ add-option-value=विकल्प मान जोड़ें
 add-option-value-to-x=विकल्प मान को {0} में जोड़ें
 add-options=विकल्प जोड़ें
 add-options-separated-by-commas=अल्पविराम के द्वारा अलग विकल्प जोड़ें.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=ऑर्डर जोड़े
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=इम्पोर्ट सेट्टिंग्स
 import-siteminder-users-from-ldap=LDAP से इम्पोर्ट करे
 import-siteminder-users-from-ldap-help=यदि यह जांच की जाती है, तो साइटमिंदर से प्रमाणित उपयोगकर्ता जो पोर्टल में मौजूद नहीं हैं, एलडीएपी से आयात किए जाते हैं। एलडीएपी को सक्षम किया जाना चाहिए। (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online Friends {0} (Automatic Copy)
 online-now=अब ऑनलाइन (Automatic Translation)
 online-training=ऑनलाइन प्रशिक्षण (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=केवल प्रशासक ही इस पोर्टलेट का उपयोग कर सकते हैं। (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=केवल एडिट मोड में आवश्यक फ़ील्ड हटाने की अनुमति दें. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=केवल इस घटना को संशोधित किया जाएगा। बाकी श्रृंखला नहीं बदलेगी।
 only-this-instance=केवल यह उदाहरण
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=उफ़ (Automatic Translation)
 opacity=अस्पष्टता (Automatic Translation)
 open=खोलें (Automatic Translation)
