--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -923,6 +923,7 @@ add-option-value=Aggiungi Valore dell'Opzione
 add-option-value-to-x=Aggiungi Valore dell'Opzione a {0}
 add-options=Aggiungi Opzioni
 add-options-separated-by-commas=Aggiungi opzioni separate da virgole.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Aggiungi Ordine
 add-order-rule=Aggiungi una Regola all'Ordine
 add-order-type=Aggiungi un Tipo di Ordine
@@ -7775,6 +7776,7 @@ import-settings=Importa le Impostazioni
 import-siteminder-users-from-ldap=Importazione da LDAP
 import-siteminder-users-from-ldap-help=Se questa opzione è selezionata, gli utenti autenticati da SiteMinder che non sono presenti nel portale vengono importati da LDAP. LDAP deve essere attivato.
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11231,6 +11233,7 @@ online-friends-x=Amici Online {0}
 online-now=Online Adesso
 online-training=Corso Online
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Solo gli amministratori possono utilzzare questa portlet.
 only-allow-deleting-required-fields-in-edit-mode=Consenti solo la cancellazione dei campi in modalità modifica.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11251,6 +11254,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Verrà modificato solo questo evento. Il resto della serie non cambierà.
 only-this-instance=Solo quest'Istanza
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=Opacità
 open=Aperta
