--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -923,6 +923,7 @@ add-option-value=Įtraukti parinkties reikšmę (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Įtraukti parinktis (Automatic Translation)
 add-options-separated-by-commas=Įtraukite kableliais atskirtas parinktis. (Automatic Translation)
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Pridėti užsakymą (Automatic Translation)
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Importavimo parametrai (Automatic Translation)
 import-siteminder-users-from-ldap=Importuoti iš LDAP (Automatic Translation)
 import-siteminder-users-from-ldap-help=Jei tai pažymėta, vartotojai, autentifikuoti iš SiteMinder, kurių nėra portale, importuojami iš LDAP. LDAP turi būti įjungtas. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online Friends {0} (Automatic Copy)
 online-now=Prisijungę dabar (Automatic Translation)
 online-training=Internetinis mokymas (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Šį prievadą gali naudoti tik administratoriai. (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Leisti naikinti reikiamus laukus tik redagavimo režimu. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Bus modifikuotas tik šis įvykis. Likusi serijos dalis nepasikeis. (Automatic Translation)
 only-this-instance=Tik šis egzempliorius (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oi (Automatic Translation)
 opacity=Neskaidrumo (Automatic Translation)
 open=Atidaryti (Automatic Translation)
