--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -923,6 +923,7 @@ add-option-value=Optiewaarde toevoegen
 add-option-value-to-x=Optiewaarde toevoegen aan {0}
 add-options=Opties toevoegen
 add-options-separated-by-commas=Opties toevoegen, gescheiden door komma's.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Bestelling toevoegen
 add-order-rule=Bestellingregel toevoegen
 add-order-type=Bestellingtype toevoegen
@@ -7776,6 +7777,7 @@ import-settings=Instellingen voor importeren
 import-siteminder-users-from-ldap=SiteMindergebruikers im porteren uit LDAP
 import-siteminder-users-from-ldap-help=Als dit is geselecteerd worden geauthenticeerde gebruikers uit SiteMinder die niet bestaan in de portal geimporteerd vanuit LDAP. LDAP moet ingeschakeld worden.
 import-status=Importstatus
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Structuur importeren
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11233,6 +11235,7 @@ online-friends-x=Vrienden online: {0}
 online-now=Nu online
 online-training=Online training
 only-41-characters-are-allowed=Maximaal 41 tekens toegestaan.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Alleen beheerders kunnen deze portlet gebruiken.
 only-allow-deleting-required-fields-in-edit-mode=Verwijderen van verplichte velden alleen toestaan in bewerkmodus.
 only-delete-this-item=Alleen dit item verwijderen.
@@ -11253,6 +11256,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Alleen het eerste tabb
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Alleen deze gebeurtenis wordt gewijzigd. De rest van de reeks zal niet veranderen.
 only-this-instance=Alleen deze instance
 only-true-will-be-accepted=Alleen waar wordt geaccepteerd.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oeps
 opacity=Transparantie
 open=Openen
