--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -923,6 +923,7 @@ add-option-value=Dodaj wartość opcji (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Dodaj opcje (Automatic Translation)
 add-options-separated-by-commas=Dodaj opcje oddzielone przecinkami.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Dodaj kolejność
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Ustawienia importu
 import-siteminder-users-from-ldap=Importuj z LDAP
 import-siteminder-users-from-ldap-help=Jeśli to jest zaznaczone, użytkownicy uwierzytelnieni z SiteMinder, które nie istnieją w portalu, są importowani z protokołu LDAP. LDAP musi być włączony. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Znajomi online {0}
 online-now=Teraz online
 online-training=Szkolenia online (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Jedynie administratorzy mogą korzystać z tego portletu.
 only-allow-deleting-required-fields-in-edit-mode=Pozwala na usunięcie tylko wybranych pól w trybie edycji.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Tylko to zdarzenie zostanie zmodyfikowane. Reszta serii się nie zmieni. (Automatic Translation)
 only-this-instance=Tylko w tej instancji
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=Krycie (Automatic Translation)
 open=Otwarte
