--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -923,6 +923,7 @@ add-option-value=Adicionar Valor da Opção
 add-option-value-to-x=Adicionar Valor da Opção para{0}
 add-options=Adicionar opções
 add-options-separated-by-commas=Adicionar opções separadas por vírgula.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Adicionar Pedido
 add-order-rule=Adicionar regra do pedido
 add-order-type=Adicionar tipo de pedido
@@ -7776,6 +7777,7 @@ import-settings=Configurações de importação
 import-siteminder-users-from-ldap=Importar do LDAP
 import-siteminder-users-from-ldap-help=Se marcado, usuários autenticados do SiteMinder que não existem no portal são importados do LDAP. O LDAP precisa estar habilitado.
 import-status=Importar estado
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Estrutura de importação
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Amigos online {0}
 online-now=Online agora
 online-training=Treinamento Online
 only-41-characters-are-allowed=Só são permitidos 41 caracteres.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Somente os administradores podem utilizar este portlet.
 only-allow-deleting-required-fields-in-edit-mode=Permitir apagar os campos obrigatórios apenas no modo de edição.
 only-delete-this-item=Apenas excluir este item.
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Apenas a primeira aba 
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Apenas este evento será modificado. O resto da série não será alterada.
 only-this-instance=Apenas esta instância
 only-true-will-be-accepted=Apenas verdadeiro será aceito.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Opa
 opacity=Opacidade
 open=Aberto
