--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -923,6 +923,7 @@ add-option-value=Добавить значение опциона (Automatic Tra
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Добавить параметры (Automatic Translation)
 add-options-separated-by-commas=Добавьте опции, разделенные запятыми.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Добавить заказ
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Настройки импорта
 import-siteminder-users-from-ldap=Импорт из LDAP
 import-siteminder-users-from-ldap-help=Если это проверено, пользователи, аутентифицированные из SiteMinder, которые не существуют на портале, импортируются из LDAP. LDAP должен быть включен. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Друзья в сети {0}
 online-now=Сейчас в сети
 online-training=Онлайн-обучение (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Только администраторы могут использовать этот портлет.
 only-allow-deleting-required-fields-in-edit-mode=Разрешить удаление обязательных полей только в режиме редактирования.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Только это событие будет изменено. Остальная часть серии не изменится. (Automatic Translation)
 only-this-instance=Только этот экземпляр
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=ой (Automatic Translation)
 opacity=непрозрачность (Automatic Translation)
 open=Открытое
