--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -923,6 +923,7 @@ add-option-value=Dodaj vrednost možnosti (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Dodaj možnosti (Automatic Translation)
 add-options-separated-by-commas=Dodaj možnosti ločene z vejico.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Dodaj vrstni red (Automatic Translation)
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Uvozi nastavitve
 import-siteminder-users-from-ldap=Uvozi iz LDAP
 import-siteminder-users-from-ldap-help=Če je to preverjeno, se uporabniki, ki so overjeni iz siteMinderja, ki ne obstajajo v portalu, uvozijo iz LDAP. LDAP mora biti omogočen. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online prijatelji {0}
 online-now=Online sedaj
 online-training=Spletno usposabljanje (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Ta programček lahko uporabljajo samo skrbniki. (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Dovolite samo brisanje zahtevanih polj v načinu urejanja. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Samo ta dogodek bo spremenjen. Preostanek serije se ne bo spremenil. (Automatic Translation)
 only-this-instance=Samo ta primerek (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Ups (Automatic Translation)
 opacity=Motnosti (Automatic Translation)
 open=Odpri
