--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -923,6 +923,7 @@ add-option-value=Lägg till alternativvärde
 add-option-value-to-x=Lägg till alternativvärde i {0}
 add-options=Lägg till alternativ
 add-options-separated-by-commas=Lägg till val (separera med kommatecken)
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Lägg till order
 add-order-rule=Lägg till orderregel
 add-order-type=Lägg till ordertyp
@@ -7776,6 +7777,7 @@ import-settings=Importinställningar
 import-siteminder-users-from-ldap=Importera från LDAP
 import-siteminder-users-from-ldap-help=Om detta markeras kommer användare som autentiserats från SiteMinder som inte finns i portalen att importeras från LDAP. LDAP måste vara aktiverat.
 import-status=Importstatus
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Importera struktur
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x={0} vänner online
 online-now=Inloggad nu
 online-training=Onlineträning
 only-41-characters-are-allowed=Endast 41 tecken tillåts.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Endast administratörer kan använda den här portleten.
 only-allow-deleting-required-fields-in-edit-mode=Tillåt endast radering av obligatoriska fält i redigeringsläge.
 only-delete-this-item=Ta bara bort det här objektet.
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Endast den första fli
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Endast den här händelsen kommer att ändras. Resten av serien kommer inte att ändras.
 only-this-instance=Endast denna instans
 only-true-will-be-accepted=Endast true accepteras.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Hoppsan
 opacity=Opacitet
 open=Öppna
