--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -923,6 +923,7 @@ add-option-value=新增選項值
 add-option-value-to-x=新增選項值至 {0}
 add-options=新增選項
 add-options-separated-by-commas=以逗號分隔增加選項。
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=增加訂單
 add-order-rule=新增訂單規則
 add-order-type=添加訂單類型
@@ -7776,6 +7777,7 @@ import-settings=匯入設定
 import-siteminder-users-from-ldap=從LDAP匯入
 import-siteminder-users-from-ldap-help=如果選中此核取方塊，將從 LDAP 導入通過 SiteMinder 進行身份驗證且不存在於門戶中的用戶。必須啟用 LDAP。
 import-status=匯入狀態
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=匯入結構
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11231,6 +11233,7 @@ online-friends-x=線上朋友 {0}
 online-now=線上現在
 online-training=線上訓練
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=只有系統管理員能使用這Portlet。
 only-allow-deleting-required-fields-in-edit-mode=只允許在編輯模式刪除必須的欄位。
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11251,6 +11254,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=只有此活動將被更改，整個系列的其他部分將不會改變。
 only-this-instance=只有這實體
 only-true-will-be-accepted=僅接受 true。
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops
 opacity=不透明度
 open=開啟
