--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -923,6 +923,7 @@ add-option-value=إضافة قيمة خيار
 add-option-value-to-x=إضافة قيمة خيار إلى {0}
 add-options=إضافة خيارات
 add-options-separated-by-commas=إضافة خيارات بينها فواصل.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=إضافة طلب
 add-order-rule=إضافة قاعدة أمر
 add-order-type=إضافة نوع أمر
@@ -7776,6 +7777,7 @@ import-settings=إعدادا الاستيراد
 import-siteminder-users-from-ldap=الاستيراد من LDAP
 import-siteminder-users-from-ldap-help=إذا تم تحديد هذا الخيار، يتم استيراد المستخدمين الذين تمت مصادقتهم من SiteMinder غير الموجودين في البوابة من LDAP. ومع ذلك، يتعين تمكين LDAP.
 import-status=حالة الاستيراد
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=استيراد البنية
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=أصدقاء الشبكة {0}
 online-now=متصل الآن
 online-training=دورة تدريبية عبر الإنترنت
 only-41-characters-are-allowed=مسموح بـ 41 حرفًا فقط.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=المدخل هذا يستخدم من قبل مسؤولي النظام فقط.
 only-allow-deleting-required-fields-in-edit-mode=السماح بحذف الحقول المطلوبة في وضع التحرير فقط.
 only-delete-this-item=حذف هذا العنصر فقط.
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=سوف يتم استخ
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=سيتم تعديل هذا الحدث فقط. ولن تتغير بقية السلسلة.
 only-this-instance=هذا المثيل فقط
 only-true-will-be-accepted=سيتم قبول الصواب فقط.
+only-update-records=Only Update Records (Automatic Copy)
 oops=عذرًا!
 opacity=معدل الشفافية
 open=إفتح
