--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -923,6 +923,7 @@ add-option-value=Tilføj indstillingsværdi (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Tilføj indstillinger (Automatic Translation)
 add-options-separated-by-commas=Tilføj indstillinger separeret med kommaer.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Tilføj ordre
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Import Settings (Automatic Copy)
 import-siteminder-users-from-ldap=Import from LDAP (Automatic Copy)
 import-siteminder-users-from-ldap-help=If this is checked, users authenticated from SiteMinder that do not exist in the portal are imported from LDAP. LDAP must be enabled. (Automatic Copy)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online Friends {0} (Automatic Copy)
 online-now=Online Now (Automatic Copy)
 online-training=Online Training (Automatic Copy)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Only administrators can use this portlet. (Automatic Copy)
 only-allow-deleting-required-fields-in-edit-mode=Tillad kun sletning af obligatoriske felter i redigeringstilstand. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Kun denne hændelse vil blive ændret. Resten af serien ændres ikke. (Automatic Translation)
 only-this-instance=Kun denne forekomst (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=ups (Automatic Translation)
 opacity=Opacitet (Automatic Translation)
 open=Åbn
