--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -923,6 +923,7 @@ add-option-value=Añadir valor de opción
 add-option-value-to-x=Añadir valor de opción a {0}
 add-options=Añadir opciones
 add-options-separated-by-commas=Especificar opciones separadas por comas.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Añadir orden
 add-order-rule=Añadir regla de pedidos
 add-order-type=Añadir tipo de pedido
@@ -7776,6 +7777,7 @@ import-settings=Configuración de la importación
 import-siteminder-users-from-ldap=Importar usuarios de LDAP
 import-siteminder-users-from-ldap-help=Si se activa esta opción, los usuarios autenticados desde SiteMinder que no existan en el portal se importarán desde LDAP. LDAP debe estar habilitado.
 import-status=Estado de la importación
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Importar estructura
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11232,6 +11234,7 @@ online-friends-x=Amigos conectados {0}
 online-now=Usuarios conectados
 online-training=Formación en línea
 only-41-characters-are-allowed=Solo se permiten 41 caracteres.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Solo los administradores pueden utilizar este portlet.
 only-allow-deleting-required-fields-in-edit-mode=Sólo está permitido el borrado de campos requeridos en modo edición.
 only-delete-this-item=Solo se eliminará este elemento.
@@ -11252,6 +11255,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Solo se usará la prim
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Solo se modificará este evento. El resto de la serie no cambiará.
 only-this-instance=Solo esta ocurrencia
 only-true-will-be-accepted=Solo se admite el valor «true».
+only-update-records=Only Update Records (Automatic Copy)
 oops=Vaya
 opacity=Opacidad
 open=Abierto
