--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -923,6 +923,7 @@ add-option-value=Lisa suvandi väärtus (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Lisa suvandid (Automatic Translation)
 add-options-separated-by-commas=Lisa valikud, eraldades need komadega.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Lisa tellimus (Automatic Translation)
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Impordi seaded
 import-siteminder-users-from-ldap=Impordi LDAP'ist
 import-siteminder-users-from-ldap-help=Sisselülitamisel imporditakse SaidMinderist autenditud kasutajad, keda portaalis pole, LDAP-ist. LDAP peab olema lubatud. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online sõbrad {0}
 online-now=Hetkel online
 online-training=Veebikoolitus (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Seda portletti saavad kasutada ainult administraatorid. (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Luba ainult nõutavate väljade kustutamine redigeerimisrežiimis. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Ainult seda sündmust muudetakse. Ülejäänud seeria ei muutu. (Automatic Translation)
 only-this-instance=Ainult see eksemplar (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=Läbipaistmatus (Automatic Translation)
 open=Ava
