--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -923,6 +923,7 @@ add-option-value=Ajouter une valeur d'option
 add-option-value-to-x=Ajouter une valeur d'option à {0}
 add-options=Ajouter des options
 add-options-separated-by-commas=Ajouter des options en les séparant par des virgules.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Ajouter une commande
 add-order-rule=Ajouter une règle de commande
 add-order-type=Ajouter un type de commande
@@ -7776,6 +7777,7 @@ import-settings=Paramètres d'importation
 import-siteminder-users-from-ldap=Importation en provenance de LDAP
 import-siteminder-users-from-ldap-help=Si cette option est cochée, les utilisateurs authentifiés sur SiteMinder qui n'existent pas dans le portail sont importés depuis le LDAP. Le LDAP doit être activé.
 import-status=Statut d'importation
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Importer la structure
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11232,6 +11234,7 @@ online-friends-x=Amis en ligne {0}
 online-now=Actuellement en ligne
 online-training=Formation en ligne
 only-41-characters-are-allowed=Seuls 41 caractères sont autorisés.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Seuls les administrateurs peuvent utiliser ce portlet.
 only-allow-deleting-required-fields-in-edit-mode=Autoriser seulement la suppression des champs requis en mode édition.
 only-delete-this-item=Supprimer uniquement cet élément.
@@ -11252,6 +11255,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Seul le premier onglet
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Seul cet événement sera modifié. Le reste des séries resteront inchangées.
 only-this-instance=Seule cette instance
 only-true-will-be-accepted=Seul vrai sera accepté.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oups
 opacity=Opacité
 open=Ouvert
