--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -923,6 +923,7 @@ add-option-value=Opcióérték hozzáadása
 add-option-value-to-x=Opcióérték hozzáadása ide: {0}
 add-options=Lehetőségek hozzáadása
 add-options-separated-by-commas=Új lehetőségek vesszővel elválasztva.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Új rendelés
 add-order-rule=Rendelési szabály hozzáadása
 add-order-type=Rendeléstípus hozzáadása
@@ -7776,6 +7777,7 @@ import-settings=Import beállítások
 import-siteminder-users-from-ldap=Importálás LDAP-ból
 import-siteminder-users-from-ldap-help=Ha be van jelölve, a SiteMinderről hitelesített felhasználók, akik nem léteznek a portálon, importálódnak az LDAP-ról. Szükséges, hogy az LDAP engedélyezve legyen.
 import-status=Importálás állapota
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Struktúra importálása
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11233,6 +11235,7 @@ online-friends-x=Online barátok {0}
 online-now=Most online
 online-training=Online tanfolyam
 only-41-characters-are-allowed=Csak 41 karakter engedélyezett.
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Csak az adminisztrátorok használhatják ezt a portletet.
 only-allow-deleting-required-fields-in-edit-mode=Csak a szükséges mezők törlésének engedélyezése szerkesztés üzemmódban.
 only-delete-this-item=Csak ezt az elemet törölje.
@@ -11253,6 +11256,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Új bejegyzés létreh
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Csak ez az esemény lesz módosítva. A sorozat többi tagja nem változik.
 only-this-instance=Csak ebben az esetben
 only-true-will-be-accepted=Csak az igaz érték fogadható el.
+only-update-records=Only Update Records (Automatic Copy)
 oops=Hopp
 opacity=Átlátszatlanság
 open=Nyitott
