--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -923,6 +923,7 @@ add-option-value=הוסף ערך של אופציה
 add-option-value-to-x=הוסף ערך אופציה ל-{0}
 add-options=אפשרויות הוספה (Automatic Translation)
 add-options-separated-by-commas=הוסף אפשרויות המופרדות בפסיק
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=הוסף הזמנה
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=ייבא הגדרות
 import-siteminder-users-from-ldap=ייבא מ-LDAP
 import-siteminder-users-from-ldap-help=אם זו מסומנת, משתמשים המאומתים מ-SiteMinder שאינם קיימים בפורטל מיובאים מ-LDAP .LDAP חייב להיות מופעל.
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=חברים מחוברים {0}
 online-now=מחובר כעת
 online-training=הכשרה מקוונת
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=רק מנהלי מערכת יכולים להשתמש בפורטלט הזה.
 only-allow-deleting-required-fields-in-edit-mode=אפשר מחיקה של שדות חובה רק במצב עריכה.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=רק האירוע הזה ישונה. שאר הסדרה לא תשתנה.
 only-this-instance=המופע הזה בלבד
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=אופס
 opacity=אטימות (Automatic Translation)
 open=פתוח
