--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -923,6 +923,7 @@ add-option-value=Tambah Nilai Opsyen (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Tambah Opsyen (Automatic Translation)
 add-options-separated-by-commas=Tambah pilihan yang dipisahkan oleh koma. (Automatic Translation)
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Tambah Pesanan (Automatic Translation)
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Pengesetan Import (Automatic Translation)
 import-siteminder-users-from-ldap=Import dari LDAP (Automatic Translation)
 import-siteminder-users-from-ldap-help=If this is checked, then users authenticated from SiteMinder that do not exist in the portal will be imported from LDAP. LDAP must be enabled.
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online Friends {0} (Automatic Copy)
 online-now=Dalam Talian Sekarang (Automatic Translation)
 online-training=Latihan Dalam Talian (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Hanya pentadbir boleh menggunakan portlet ini. (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Hanya benarkan menghapuskan medan yang diperlukan dalam mod edit. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Hanya peristiwa ini akan diubahsuai. Selebihnya siri ini tidak akan berubah. (Automatic Translation)
 only-this-instance=Hanya Contoh Ini (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=Kelegapan (Automatic Translation)
 open=Terbuka (Automatic Translation)
