--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -923,6 +923,7 @@ add-option-value=Legg til alternativverdi (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Alternativer for å legge til (Automatic Translation)
 add-options-separated-by-commas=Legg til valg separert med komma.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Legg til ordre
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Importinnstillinger
 import-siteminder-users-from-ldap=Importer fra LDAP
 import-siteminder-users-from-ldap-help=Hvis det er merket av for dette, importeres brukere som er godkjent fra SiteMinder som ikke finnes i portalen fra LDAP. LDAP må være aktivert. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Innloggede venner {0}
 online-now=Innlogget nå
 online-training=Online trening
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Kun administratorer kan bruke dette portletet.
 only-allow-deleting-required-fields-in-edit-mode=Tillat bare sletting av påkrevde felt i redigeringsmodus.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Bare denne hendelsen vil endres. Resten av serien endres ikke.
 only-this-instance=Bare denne instansen
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=ugjennomsiktighet (Automatic Translation)
 open=Åpen
