--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -923,6 +923,7 @@ add-option-value=Adicionar valor de opção (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Adicionar opções (Automatic Translation)
 add-options-separated-by-commas=Adicione as opções separadas por vírgulas.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Adicionar Pedido
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Configurações de Importação
 import-siteminder-users-from-ldap=Importar de LDAP
 import-siteminder-users-from-ldap-help=Se a opção for selecionada, então os utilizadores autenticados pelo SiteMinder que não existam no portal, serão importados de LDAP. O LDAP deve estar ativo.
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11232,6 +11234,7 @@ online-friends-x=Amigos Online {0}
 online-now=Online Agora
 online-training=Treino Online
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Apenas os administradores podem utilizar esta portlet.
 only-allow-deleting-required-fields-in-edit-mode=Permitir apagar os campos obrigatórios apenas no modo de edição.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11252,6 +11255,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Apenas este evento será modificado. O resto da série não vai mudar. (Automatic Translation)
 only-this-instance=Apenas esta instância
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=opacidade (Automatic Translation)
 open=Aberto
