--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -923,6 +923,7 @@ add-option-value=Adăugare valoare opțiune (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Adăugare opțiuni (Automatic Translation)
 add-options-separated-by-commas=Adaugă opțiuni separate prin virgulă.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Adaugă Comandă
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Importă Setări
 import-siteminder-users-from-ldap=Importă din LDAP
 import-siteminder-users-from-ldap-help=Dacă acest lucru este bifat, utilizatorii autentificați din SiteMinder care nu există în portal sunt importați din LDAP. LDAP trebuie activat. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Prieteni Online {0}
 online-now=Online Acum
 online-training=Instruire online (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Dor administratorii pot folosi acest modul.
 only-allow-deleting-required-fields-in-edit-mode=Permiteți numai ștergerea câmpurilor necesare în modul de editare. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Numai acest eveniment va fi modificat. Restul seriei nu se va schimba. (Automatic Translation)
 only-this-instance=Numai această instanță (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=Opacitate (Automatic Translation)
 open=Deschide
