--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -923,6 +923,7 @@ add-option-value=Pridať hodnotu možnosti (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Pridať možnosti (Automatic Translation)
 add-options-separated-by-commas=Pridajte niektoré z možností, oddelené čiarkami.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Pridať objednávku
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Nastavenia importu
 import-siteminder-users-from-ldap=Importovať z LDAP-u
 import-siteminder-users-from-ldap-help=Ak je táto voľba zapnutá, používatelia overení z SiteMinder, ktoré neexistujú na portáli, sa importujú z LDAP. LDAP musí byť zapnutá. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x={0} online priateľov
 online-now=Teraz online
 online-training=Online školenie
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Tento portlet môžu používať iba administrátori.
 only-allow-deleting-required-fields-in-edit-mode=Povoliť mazanie povinných polí iba v režime úprav.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Upraví sa iba táto udalosť. Zvyšok série sa nezmení. (Automatic Translation)
 only-this-instance=Iba táto inštancia
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Jejda (Automatic Translation)
 opacity=neprehľadnosť (Automatic Translation)
 open=Otvorený
