--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -923,6 +923,7 @@ add-option-value=Add Option Value (Automatic Copy)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Add Options (Automatic Copy)
 add-options-separated-by-commas=இடைவெளிகள் மூலம் பிரிக்கப்பட்ட options- களைச் சேர்க்க.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=ஆர்டரை இணைக்க
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=இறக்குமதி அமைப்புகள்
 import-siteminder-users-from-ldap=LDAP-ல் இருந்து இறக்குமதி
 import-siteminder-users-from-ldap-help=இது தேர்ந்தெடுக்கப்பட்டால், போர்ட்டலில் இல்லாத சைட்மைன்டரில் இருந்து பயனர்கள் ldap ல் இருந்து இறக்குமதி செய்யப்படுகின்றன. LDAP செயலாக்கப்பட வேண்டும்.
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=ஆன்லைன் நண்பர்கள் {0}
 online-now=இணையத்தில்
 online-training=ஆன்லைன் பயிற்சி
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=இந்த போர்ட்லெட் நிர்வாகிகள் மட்டுமே பயன்படுத்த முடியும்.
 only-allow-deleting-required-fields-in-edit-mode=திருத்துதல் முறையில் தேவையான புலங்களை நீக்குவதை மட்டும் அனுமதிக்கவும்.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=இந்த நிகழ்வை மாற்றியமைக்கப்படும். தொடரின் மற்ற நிகழ்வுகள் மாறாது.
 only-this-instance=இந்த நிகழ்வு மட்டுமே
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=அச்சச்சோ
 opacity=Opacity (Automatic Copy)
 open=திற
