--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -923,6 +923,7 @@ add-option-value=Seçenek Değeri Ekle (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Seçenek Ekle (Automatic Translation)
 add-options-separated-by-commas=Seçenekleri virgülle ayırarak ekle.
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Sipariş Ekle (Automatic Translation)
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=İçe Aktarma Ayarları
 import-siteminder-users-from-ldap=LDAP'tan SiteMinder Kullanıcılarını İçe Aktar
 import-siteminder-users-from-ldap-help=Bu işaretlenirse, Portalda bulunmayan SiteMinder kimliği doğrulanmış kullanıcılar LDAP'den alınır. LDAP etkinleştirilmelidir. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Online Friends {0} (Automatic Copy)
 online-now=Şimdi Çevrimiçi
 online-training=Çevrimiçi Eğitim (Automatic Translation)
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Bu bağlantı noktasını yalnızca yöneticiler kullanabilir. (Automatic Translation)
 only-allow-deleting-required-fields-in-edit-mode=Yalnızca düzenleme modunda gerekli alanların silinmasına izin verin. (Automatic Translation)
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Yalnızca bu olay değiştirilecek. Serinin geri kalanı değişmeyecek. (Automatic Translation)
 only-this-instance=Yalnızca Bu Örnek (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Oops (Automatic Translation)
 opacity=Opak -lık (Automatic Translation)
 open=Açık
