--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -923,6 +923,7 @@ add-option-value=Thêm Giá trị Tùy chọn (Automatic Translation)
 add-option-value-to-x=Add Option Value to {0} (Automatic Copy)
 add-options=Thêm Tùy chọn (Automatic Translation)
 add-options-separated-by-commas=Thêm các lựa chọn (cách nhau bởi dấu phẩy).
+add-or-update-records=Add or Update Records (Automatic Copy)
 add-order=Thêm đơn đặt hàng
 add-order-rule=Add Order Rule (Automatic Copy)
 add-order-type=Add Order Type (Automatic Copy)
@@ -7776,6 +7777,7 @@ import-settings=Nhập dữ liệu cài đặt
 import-siteminder-users-from-ldap=Nhập dữ liệu từ LDAP
 import-siteminder-users-from-ldap-help=Nếu điều này được chọn, người dùng xác thực từ SiteMinder không tồn tại trong cổng thông tin được nhập từ LDAP. LDAP phải được kích hoạt. (Automatic Translation)
 import-status=Import Status (Automatic Copy)
+import-strategy=Import Strategy (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
 import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
@@ -11230,6 +11232,7 @@ online-friends-x=Bạn trực tuyến {0}
 online-now=Trực tuyến ngay
 online-training=Đào tạo trực tuyến
 only-41-characters-are-allowed=Only 41 characters are allowed. (Automatic Copy)
+only-add-new-records=Only Add New Records (Automatic Copy)
 only-administrators-can-use-this-portlet=Chỉ có Quản trị viên được dùng portlet này.
 only-allow-deleting-required-fields-in-edit-mode=Chỉ cho phép xóa trường bắt buộc ở chế độ cập nhật.
 only-delete-this-item=Only delete this item. (Automatic Copy)
@@ -11250,6 +11253,7 @@ only-the-first-tab-will-be-used-when-creating-a-new-entry=Only the first tab wil
 only-this-event-will-be-modified-the-rest-of-the-series-will-not-change=Chỉ sự kiện này mới được sửa đổi. Phần còn lại của bộ truyện sẽ không thay đổi. (Automatic Translation)
 only-this-instance=Chỉ phiên bản này (Automatic Translation)
 only-true-will-be-accepted=Only true will be accepted. (Automatic Copy)
+only-update-records=Only Update Records (Automatic Copy)
 oops=Rất tiếc (Automatic Translation)
 opacity=Opacity (Automatic Translation)
 open=Mở
